# sl-cartography

./: .gitignore  LICENSE  README.md  pyproject.toml
src/: config.example.toml  config.toml.example
src/_old/cartographer/roadmapper/: README.md  __main__.py  config.py  yaml.py
src/_old/cartographer/roadmapper/parse_chat/: __init__.py  __main__.py
src/_old/region_auditor/xchg/: importYAML.py
src/analysis/: clump.py  clump2.py  clump3.py  clump3b.py  moves.py  overlap.py  recent.py
src/analysis/clumps/: __init__.py  __main__.py
src/analysis/recent/: __init__.py  __main__.py  visually.py
src/cartographer/: __main__.py
src/cartographer/roadmapper/: __main__.py  colors.py  config.py  road.py  yaml.py
src/cartographer/roadmapper/parse/: __init__.py  __main__.py  config.py
src/cartographer/roadmapper/parse_chat/: __init__.py  __main__.py  config.py
src/cartographer_v4/: __main__.py  belli_for_slgi.py  regions_lister.py
src/cartographer_v4/grid/: __init__.py  __main__.py
src/cartographer_v4/gridsectors/: __main__.py  world.py
src/cartographer_v4/lattice/: __init__.py  __main__.py
src/gridsurvey/: __init__.py  scrape.py
src/mosaic/: __main__.py  builder.py  color_processing.py  progress.py  tiles_processors.py
src/mosaic_v3/: __main__.py  builder.py  color_processing.py  config.py  dispatcher.py  grab_names.py  progress.py
src/mosaic_v3/workers/: __init__.py  processor.py  recorder.py  tile_processor.py
src/mosaic_v4/: nightlights.py
src/region-watch/: __main__.py
src/region_auditor/: __init__.py  __main__.py  exportDB.py  importYAML.py  maps.py  names.py
src/region_auditor/xchg/: exportDB.py
src/region_recorder/: __main__.py
src/retriever/: __init__.py  maps.py
src/retriever/maps/: __main__.py  saver.py
src/retriever/names/: __main__.py
src/retriever_v4/: __init__.py
src/retriever_v4/bonnie/: __main__.py
src/retriever_v4/maps/: __init__.py  __main__.py  area.py  mp.py  prune.py  saver.py
src/retriever_v4/maps/_workers/: retriever.py  saver.py
src/retriever_v4/names/: __main__.py  export.py  mp.py  upgrade_db.py  xchg.py
src/roadmapper_v3/: __main__.py
src/roadmapper_v3/draw/: __init__.py  colors.py
src/roadmapper_v3/model/: __init__.py  yaml.py
src/roadmapper_v3/parser/: chat.py  chat3.py  yaml_v1.py
src/roadmapper_v3/parser/LSL/: PosRecorder_v2.lsl  README.md
src/sl_maptools/: __init__.py  bb_fetcher.py  cap_fetcher.py  colors.py  config.py  fetcher.py  image_processing.py  img_comparer.py  knowns.py  knowns.yaml  knowns.yaml.schema.json  utils.py  validator.py
src/sl_maptools/fetchers/: __init__.py  bonnie.py  cap.py  map.py
src/worldmap_v4/: __init__.py  export_domc_db.py  grids.py  gridsectors.py  mosaic.py  mosaic2.py  mosaic3.py  nightlights.py
src/worldmap_v4/gridsectors/: __main__.py
src/worldmap_v4/mosaic/: __init__.py  __main__.py
src/worldmap_v4/mosaic/_workers/: __init__.py  calc_domc.py  collector.py  maker.py
src/worldmap_v4/nightlights2/: __init__.py  __main__.py  tiler_10x10.py  tiler_7x7.py  tiler_8x8.py
tests/mosaic_v3/: test_builder.py  test_color_processing.py
tools/: cleanup.py  make-archive.py  make-archive.sh
