[project]
name = "sl-cartography"
version = "0.12"
requires-python = ">=3.11"
description = "Libraries and tools for performing Second Life Cartography"
keywords = ["sl", "secondlife", "second life", "cartography"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Environment :: Console",
    "Intended Audience :: End Users/Desktop",
    "License :: OSI Approved",
    "License :: OSI Approved :: Mozilla Public License 2.0 (MPL 2.0)",
    "Natural Language :: English",
    "Programming Language :: Python :: 3.11",
    "Topic :: Games/Entertainment",
    "Topic :: Games/Entertainment :: Multi-User Dungeons (MUD)",
    "Topic :: Games/Entertainment :: Simulation",
    "Topic :: Multimedia :: Graphics :: Capture",
    "Topic :: Utilities",
]
readme = "README.md"
license = { file = "LICENSE" }
authors = [
    {name = "Claire Morgenthau", email = "claire_morgenthau@outlook.com"}
]
dependencies = [
    "pillow",
    "httpx",
    "httpx[http2]",
    'uvloop; platform_system == "Linux" and platform_python_implementation == "CPython"',
    "msgpack",
    "appdirs",
    "beautifulsoup4",
    "ruamel.yaml",
    "pytz",
    "scikit-image",
    "tomli>=1.1.0; python_version < '3.11'",
]

[build-system]
build-backend = "setuptools.build_meta"
requires = [
    "pillow",
    "httpx",
    "httpx[http2]",
    'uvloop; platform_system == "Linux" and platform_python_implementation == "CPython"',
    "msgpack",
    "appdirs",
    "beautifulsoup4",
    "ruamel.yaml",
    "pytz",
    #
    "black",
    "black[d]",
    "isort",
    "pytest",
    #
    "setuptools>=40.8.0",
    "wheel",
]

[project.optional-dependencies]
# Dev dependencies.
dev = [
    "black",
    "black[d]",
    "isort",
]

[tool.isort]
profile = "black"
py_version = 310

[tool.black]
line-length = 120
target-version = ['py311']

[tool.pytest.ini_options]
addopts = [
    "--import-mode=importlib",
]

[tool.ruff]
select = ["E", "F", "B", "S", "D", "YTT", "ANN", "CPY", "RET", "SLOT", "SIM", "TCH", "ARG", "PTH", "FIX", "PGH", "PL", "TRY", "PERF", "RUF"]
ignore = [
    "ANN101",  # No need to annotate 'self'
    "ANN204",  # No need to annotate return values of magic methods
    "D105",  # Do not enforce docstring for magic method; they are mostly self-describing
    "D200",  # Do not force 1-line docstring
    "D212",  # Do not force docstring summary at first line, so we don't have the ugly indented summary
    "D400",  # Do not enforce period at end of 1st line of docstring ...
    "D415",  # ... or any closing mark for that matter
    "D401",  # I have no idea what "imperative mood" is; so subjective
    "E501",  # I disagree with short line lengths
]
target-version = "py311"
